yaml/node-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs
  labels:
    app: react-nodejs-mysql
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: react-nodejs-mysql
    tier: backend
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs
  labels:
    app: react-nodejs-mysql
spec:
  selector:
    matchLabels:
      app: react-nodejs-mysql
      tier: backend
  strategy:
    type: Recreate
  template:
    metadate:
      labels:
        app: react-nodejs-mysql
        tier: backend
    spec:
      containers:
        - image: mannmae/fullstack-nodejs
          name: nodejs
          ports:
            - containerPort: 8080
              name: nodejs
          volumeMounts:
            - name: nodejs-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: nodejs-persistent-storage
          persistentVolumeClaim:
            claimName: nodejs-pv-claim
